# vte

./: .cvsignore  .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  BIDI-STATUS  COPYING.GPL3  COPYING.README  COPYING.XTERM  ChangeLog  HACKING  MAINTAINERS  MESSAGE-OF-DOOM  Makefile.am  Makefile.in  Makefile.meson  NEWS  README  README.md  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  git.mk  meson.build  meson_options.txt  meson_subprojects.sh  vte-uninstalled.pc.in  vte.doap  vte.pc.in  vte.spec  vte.spec.in
.gitlab-ci/: docs.html  make-release.sh
bindings/: meson.build
bindings/gir/: Makefile.am  meson.build
bindings/glade/: meson.build  vte.xml.in
bindings/vala/: Makefile.am  Vte-2.91.metadata  app.gresource.xml  app.vala  meson.build
build-aux/: Makefile  org.gnome.vte.gtk.json.in  org.gnome.vte.gtk3.json  org.gnome.vte.gtk4.json
doc/: Makefile.am  ambiguous.txt  bidi.txt  boxes.txt  ctlseqs.ms  ctlseqs.ps  emoji.txt  readme.txt  rewrap.txt  scrolling-region.txt  utmpwtmp.txt
doc/openi18n/: .cvsignore  Makefile  Makefile.am
doc/reference/: .cvsignore  Makefile.am  Makefile.docs  check-doc-coverage.sh  check.docs  licence.md  meson.build  migration-0-30.xml  vte-docs.sgml  vte-docs.xml  vte-gtk3.toml.in  vte-gtk4.toml.in  vte-sections.txt  vte-sections.txt.in  vte.types
doc/reference/gtk3/: meson.build
doc/reference/gtk4/: meson.build
doc/reference/tmpl/: caps.sgml  debug.sgml  internals.sgml  iso2022.sgml  marshal.sgml  pty.sgml  reaper.sgml  ring.sgml  table.sgml  termcap.sgml  trie.sgml  vte-unused.sgml  vte.sgml  vteaccess.sgml  vteversion.sgml
doc/vttest-20011130/: BUGS  CHANGES  COPYING  MANIFEST  README  aclocal.m4  charsets.c  color.c  config.cache  config.h  config.hin  config.status  configure  configure.in  descrip.mms  esc.c  esc.h  keyboard.c  main.c  makefile  makefile.in  mouse.c  nonvt100.c  patchlev.h  printer.c  reports.c  reset.c  setup.c  sixel.c  status.c  tech.set  ttymodes.c  ttymodes.h  unix_io.c  vms_io.c  vmsbuild.com  vt220.c  vt420.c  vt52.c  vttest  (+4 more)
glade/: Makefile.am  meson.build  vte.xml.in  vte.xml.in.in
gnome-pty-helper/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  configure.in  git.mk  gnome-login-support.c  gnome-login-support.h  gnome-pty-helper.c  gnome-pty.h  gnome-utmp.c
m4/: ax_cxx_compile_stdcxx_11.m4
perf/: 1fb.sh  256test.sh  Makefile.am  UTF-8-test.txt  bidi-demo.txt  bidi.sh  block.py  checkered.sh  deco.sh  hyperlink-demo.txt  img.sh  inc.sh  legacy.py  line-drawing-missing.sh  printwinsize.py  scroll.vim  sgr-test.sh  vim.sh
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ang.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  (+75 more)
python/: .cvsignore  Makefile.am  cat.py  pyvte.pc.in  unrealize.py  vte-demo.py  vte.defs  vte.override  vte.py  vtemodule.c
src/: .cvsignore  Makefile.am  Makefile.in  app.gresource.xml  app.ui  app.vala  attr.hh  base16-test.cc  base16.hh  bidi.cc  bidi.hh  bidiarrays.hh  box-drawing.hh  box_drawing_generate.sh  boxed.hh  buffer.c  buffer.h  cairo-glue.hh  caps-list.hh  caps.c  caps.cc  caps.h  caps.hh  cell.hh  check-doc-syntax.sh  check-libstdc++.sh  chunk.cc  chunk.hh  clipboard-gtk.cc  clipboard-gtk.hh  color-lightness-tests.cc  color-lightness.cc  color-lightness.hh  color-names-tests.hh  color-names.hh  color-palette.hh  color-parser.cc  color-parser.hh  color-test.cc  color-triple.hh  (+325 more)
src/app/: Makefile.am  app-gtk3.gresource.xml  app-gtk4.css  app-gtk4.gresource.xml  app.cc  appmenu-gtk3.ui  appmenu-gtk4.ui  meson.build  meson_desktopfile.py  search-popover-gtk3.ui  search-popover-gtk4.ui  vte.desktop.in  window-gtk3.ui  window-gtk4.ui  window.ui
src/terminfo/: Makefile  meson.build  meson_tic.py  run_tic.py  terminfo.src  xterm-256color
src/vte/: meson.build  vte.h  vtedeprecated.h  vteenums.h  vteglobals.h  vtemacros.h  vteproperties.h  vtepty.h  vteregex.h  vtesystemd.h  vteterminal.h  vtetypebuiltins.h  vteuuid.h  vteversion.h.in
subprojects/: fast_float.wrap  fmt.wrap  simdutf.wrap
subprojects/packagefiles/fast_float/: meson.build
subprojects/packagefiles/fmt/: meson.build
subprojects/packagefiles/simdutf/: 1.patch  meson.build  meson.options
termcaps/: Makefile.am  xterm  xterm-color  xterm.baseline
vte/: vte.h
